--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -4,5 +4,6 @@
 @import "../../node_modules/bootstrap/scss/dropdown";
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
+@import "../../node_modules/bootstrap/scss/grid";
 
 @import "../../node_modules/bootstrap/scss/utilities/api";
