--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -1,9 +1,9 @@
-@import "../../node_modules/bootstrap/scss/root";
-@import "../../node_modules/bootstrap/scss/reboot";
-@import "../../node_modules/bootstrap/scss/containers";
-@import "../../node_modules/bootstrap/scss/dropdown";
-@import "../../node_modules/bootstrap/scss/nav";
-@import "../../node_modules/bootstrap/scss/navbar";
-@import "../../node_modules/bootstrap/scss/grid";
+@import "~bootstrap/scss/_root";
+@import "~bootstrap/scss/_reboot";
+@import "~bootstrap/scss/_containers";
+@import "~bootstrap/scss/_dropdown";
+@import "~bootstrap/scss/_nav";
+@import "~bootstrap/scss/_navbar";
+@import "~bootstrap/scss/_grid";
 
-@import "../../node_modules/bootstrap/scss/utilities/api";
+@import "~bootstrap/scss/utilities/_api";
