--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -5,6 +5,7 @@
 @import "~bootstrap/scss/_grid";
 @import "~bootstrap/scss/_dropdown";
 @import "~bootstrap/scss/_nav";
+@import "~bootstrap/scss/_alert";
 @import "~bootstrap/scss/_navbar";
 
 @import "~bootstrap/scss/_helpers.scss";
